# auth-service

./: Dockerfile  RBAC_README.md  auth.sql  docker-compose.yaml  pyproject.toml
src/: main.py
src/api/v1/endpoints/: auth.py  roles.py
src/core/: access_control.py  config.py  database.py  init_roles.py  mail.py  middleware.py  redis.py  security.py
src/models/: role.py  session.py  user.py
src/schemas/: auth.py  role.py  user.py
src/services/: auth.py  email_service.py  otp.py  role.py  session.py
src/utils/: exceptions.py  migrations.py
